--- a/public/css/indexFaNi_style.css
+++ b/public/css/indexFaNi_style.css
@@ -125,8 +125,8 @@
 
         .more a {
             display: inline-block;
-            background: var(--primary);
-            color: white;
+            background: white;
+            color: black;
             border: none;
             padding: 0.7rem 2rem;
             border-radius: 4px;
